Update C01N repo with AIOBLE library, Fuji camera remote control app and ESP32 Micropython firmware with BLE support

--- a/apps/apps.json
+++ b/apps/apps.json
@@ -2,5 +2,6 @@
 {"name":"Name Badge","dir":"namebadge","start":"name"},
 {"name":"SG Weather","dir":"sgweather","start":"weather"},
 {"name":"Coin Sketch","dir":"coinsketch","start":"coinsketch"},
-{"name":"Ping Pong","dir":"pingpong","start":"pingpong"}
+{"name":"Ping Pong","dir":"pingpong","start":"pingpong"},
+{"name":"Fuji Remote","dir":"coincam","start":"coincam"}
 ]}
